# mlops_project

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  HISTORY.md  LICENSE  README.md  justfile  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: test.yml
docs/: index.md  installation.md  usage.md
src/mlops_project/: __init__.py  app.py  cli.py  utils.py
tests/: test_mlops_project.py
