[project]
name = "mlops_project"
version = "0.1.0"
description = "DTU MLOps project using Cookiecutter"
readme = "README.md"
authors = [
  {name = "Nandini Karnati", email = "karnatinandini61@gmail.com"}
]
maintainers = [
  {name = "Nandini Karnati", email = "karnatinandini61@gmail.com"}
]
classifiers = [
    # TODO
]
license = {text = "MIT"}
dependencies = [
  "typer"
]
requires-python = ">= 3.10"

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb", # debugging
]

[project.urls]
bugs = "https://github.com/NandiniKarnati21/mlops_project/issues"
changelog = "https://github.com/NandiniKarnati21/mlops_project/blob/master/changelog.md"
homepage = "https://github.com/NandiniKarnati21/mlops_project"

[project.scripts]
mlops_project = "mlops_project.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true
