[project]
name = "mlops_project"
version = "0.1.0"
description = "DTU MLOps project using Cookiecutter"
readme = "README.md"
requires-python = ">=3.10"

authors = [
  { name = "Nandini Karnati", email = "karnatinandini61@gmail.com" }
]

license = { text = "MIT" }

dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "typer>=0.9.0"
]

[project.urls]
bugs = "https://github.com/NandiniKarnati21/mlops_project/issues"
homepage = "https://github.com/NandiniKarnati21/mlops_project"

[project.scripts]
mlops_project = "mlops_project.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
